<resources>

    <string name="app_name">DC Trainer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_meal_list">DC Trainer</string>
    <string name="title_activity_new_meal">NewWorkoutActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_new">Add a Workout</string>
    <string name="menu_title">My Workouts</string>
    <string name="new_workout">New Workout:</string>
    <string name="workout_label">1A</string>
    <string name="exercise_label">Exercise</string>
    <string name="exercise_name"> EX1 </string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="exercise1_button_text">Ex1</string>
    <string name="exercise2_button_text">EX2</string>
    <string name="exercise3_button_text">Ex3</string>
    <string name="exercise4_button_text">Ex4</string>
    <string name="exercise5_button_text">Ex5</string>
    <string name="sets">Sets:</string>
    <string name="reps">Reps:</string>
    <string name="weight_reminder">Weight</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_top">Best Lifts</string>
    <string name="action_logout">Logout</string>
    <string name="username">Username:</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="password_label">Password:</string>
    <string name="already_have_an_account_label">Already Have An Account? Log In!</string>
    <string name="sign_in_label">Sign In</string>
    <string name="dont_have_an_account_label">Don\'t have an account? Register!</string>
    <string name="action_settings">Settings</string>
    <string name="exercise_stats">Exercise Stats</string>
    
    <string-array name="reps_array">
        <item>18</item>
        <item>17</item>
        <item>16</item>
        <item>15</item>
        <item>14</item>
        <item>13</item>
        <item>12</item>
        <item>11</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    
    <string-array name="sets_array">
        <item>RP</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
     </string-array>
    
    <string-array name="workout_array">
        <item>1A</item>
        <item>2A</item>
        <item>1B</item>
        <item>2B</item>
    </string-array>

</resources>