<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <LinearLayout
		android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="5dp"
          android:text="@string/new_workout"
          android:textSize="20sp" />
		<Spinner
        android:id="@+id/workout_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
	</LinearLayout>

    
   <Button
        android:id="@+id/exercise1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise1_button_text" />
   
   <Button
        android:id="@+id/exercise2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise2_button_text" />
   
   <Button
        android:id="@+id/exercise3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise3_button_text" />
   <Button
        android:id="@+id/exercise4_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise4_button_text" />
   <Button
        android:id="@+id/exercise5_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise5_button_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text" />

    <com.parse.ParseImageView
        android:id="@+id/meal_preview_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp" />

</LinearLayout>