<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">


    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/exercise_name"
        android:textSize="20sp" />

   <LinearLayout
		android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:text="@string/sets"/> 
		<Spinner
        android:id="@+id/sets_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
		<TextView 
		    android:id="@+id/sets_hint"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:textColor="#0000ff" 
    		android:text="@string/sets"/> 
    </LinearLayout>
    <LinearLayout
		android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:text="@string/reps"/> 
		<Spinner
        android:id="@+id/reps_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
		<TextView 
		    android:id="@+id/reps_hint"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:textColor="#0000ff"
    		android:text="@string/reps"/> 
    </LinearLayout>
	 

     <EditText
        android:id="@+id/weight"
        android:hint="@string/weight_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:inputType="number" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text" />

    <com.parse.ParseImageView
        android:id="@+id/meal_preview_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp" />

</LinearLayout>